# aoc-lib

./: Cargo.toml
src/: cli.rs  day.rs  lib.rs
src/cli/: add_test.rs  fetch.rs  run.rs  store.rs
src/day/: runner.rs  todo.rs
