[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
